// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.vue renders 'Nenhum item encontrado!' on empty items 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="form-floating mx-3 mt-3"
      >
        <input-search-stub
          search=""
        />
      </div>
    </div>
    <div
      class="col d-flex justify-content-end"
    >
      <div>
        button
      </div>
    </div>
  </div>
  <table
    class="table"
  >
    <thead>
      <tr>
        
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          My Title
        </th>
        
        <!--v-if-->
      </tr>
    </thead>
    <tbody>
      
      
      <tr>
        <td
          class="text-center text-nowrap text-muted"
        >
          <span>
            Nenhum item encontrado!
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  
</div>
`;

exports[`DataTable.vue renders props.columns and items values when passed 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="row"
  >
    <div
      class="col"
    >
      <div
        class="form-floating mx-3 mt-3"
      >
        <input-search-stub
          search=""
        />
      </div>
    </div>
    <div
      class="col d-flex justify-content-end"
    >
      <div>
        button
      </div>
    </div>
  </div>
  <table
    class="table"
  >
    <thead>
      <tr>
        
        <th
          scope="col"
        >
          #
        </th>
        <th
          scope="col"
        >
          My Title
        </th>
        
        <!--v-if-->
      </tr>
    </thead>
    <tbody>
      
      <tr>
        
        <td>
          <span>
            any_id
          </span>
        </td>
        <td>
          <span>
            any_title
          </span>
        </td>
        
        <!--v-if-->
      </tr>
      <tr>
        
        <td>
          <span>
            any_id_1
          </span>
        </td>
        <td>
          <span>
            any_title_1
          </span>
        </td>
        
        <!--v-if-->
      </tr>
      <tr>
        
        <td>
          <span>
            any_id_2
          </span>
        </td>
        <td>
          <span>
            any_title_2
          </span>
        </td>
        
        <!--v-if-->
      </tr>
      
      <!--v-if-->
    </tbody>
  </table>
  
</div>
`;
